Config is tested with multiple devices. added verification of ip on UDP Protocol

--- a/RF_Go/wwwroot/index.html
+++ b/RF_Go/wwwroot/index.html
@@ -9,13 +9,19 @@
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="RF_Go.styles.css" rel="stylesheet" />
+    <style>
+        body {
+            background-color: #1a1a27;
+            color:#ffffff;
+        }
+    </style>
 </head>
 
 <body>
 
     <div class="status-bar-safe-area"></div>
 
-    <div id="app">Loading...</div>
+    <div id="app"></div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
