Bug Fix MacOS releases

--- a/RF_Go/wwwroot/index.html
+++ b/RF_Go/wwwroot/index.html
@@ -47,8 +47,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
-    <script src="_framework/blazor.webview.js" autostart="false"></script>
-    <script src="_framework/blazor.server.js"></script>
+    <script src="_framework/blazor.webview.js"></script>
     <script src="js/scichartInterop.js"></script>
     <script src="js/package/index.min.js"></script>
 
